Fixed favicon and Face Scrambler links.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Web Portfolio">
     <meta name="author" content="Craig Bester">
     <title>Craig Bester &#8226; Personal Website</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     
     <link rel="stylesheet" type="text/css" href="assets/paper.min.css">
     <link rel="stylesheet" type="text/css" href="assets/demo.css">
@@ -87,7 +87,7 @@
                 </div>
                 
                 <div class="card margin">
-                    <a class="card-link" href="OpenCVApp/index.html">
+                    <a class="card-link" href="facescrambler/index.html">
                     <img src="assets/img/facescrambler.jpg" alt="Card example image">
                     <div class="card-body">
                     <h4 class="card-title">Face Scramber</h4>
