--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <i class="fab fa-github fa-lg" aria-hidden="true"></i>
                         <span class="sr-only">Github</span>
                     </a>
-                    <a class="paper-btn round-btn margin" href="https://www.linkedin.com/in/craig-bester-a245ba9a">
+                    <a class="paper-btn round-btn margin" href="https://www.linkedin.com/in/craig-j-bester">
                         <i class="fab fa-linkedin-in fa-lg" aria-hidden="true"></i>
                         <span class="sr-only">LinkedIn</span>
                     </a>
