Added GitHub Activity Feed card.

--- a/index.html
+++ b/index.html
@@ -151,6 +151,20 @@
                         <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span class="sr-only">Github</span>Javascript, OpenCV
                     </a></div>
                 </div>
+                
+                <div class="card margin">
+                    <a class="card-link" href="http://cycraig.pythonanywhere.com/">
+                    <img class="card-img" src="assets/img/githubactivityfeed.jpg" alt="Card example image">
+                    <div class="card-body">
+                    <h4 class="card-title">GitHub Activity Feed</h4>
+                    <p class="card-text">Simple GitHub event viewer with OAuth.</p>
+                    </div>
+                    </a>
+                    <div class="card-footer">
+                        <a class='paper-btn card-footer-btn' href="https://github.com/cycraig/GithubActivityFeed">
+                        <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span class="sr-only">Github</span>Python, Flask
+                    </a></div>
+                </div>
             </div>
         </div>
     </div>
