--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
         }
     </script>
     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178386866-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-178386866-1');
+    </script>
 </head>
 <body>
     <div id='content' class='row site'>
