--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <i class="fas fa-envelope" aria-hidden="true"></i>
                         <span class="sr-only">Email</span>
                     </a>
-                    <a class="paper-btn round-btn margin" href="https://www.linkedin.com/in/craig-j-bester">
+                    <a class="paper-btn round-btn margin" href="https://www.linkedin.com/in/craig-bxae">
                         <i class="fab fa-linkedin-in fa-lg" aria-hidden="true"></i>
                         <span class="sr-only">LinkedIn</span>
                     </a>
