Switch to Cloudflare Analytics

--- a/index.html
+++ b/index.html
@@ -32,15 +32,7 @@
     }
 </style>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-178386866-1"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-178386866-1');
-</script>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "0088ebc088b24d2b85d51613fd8431f5"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 
 <body>
