--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                     <div class="card margin">
                         <a class="card-link" href="https://github.com/iotaledger/identity.rs">
-                            <img class="card-img" src="assets/img/iota_did.webp" alt="IOTA Identity Logo">
+                            <img class="card-img" src="assets/img/iota_did.webp" alt="IOTA Identity logo shaped like a fingerprint">
                             <div class="card-body">
                                 <h4 class="card-title">IOTA Identity</h4>
                                 <p class="card-text">Self-Sovereign Identity (SSI) framework.</p>
@@ -84,7 +84,7 @@
 
                     <div class="card margin">
                         <a class="card-link" href="http://scpbattle.craigbester.com/">
-                            <img class="card-img" src="assets/img/scpbattle.webp" alt="SCP Battle">
+                            <img class="card-img" src="assets/img/scpbattle.webp" alt="SCP Battle website">
                             <div class="card-body">
                                 <h4 class="card-title">SCP Battle</h4>
                                 <p class="card-text">Voting webapp based on the SCP Foundation.</p>
@@ -101,7 +101,7 @@
 
                     <div class="card margin">
                         <a class="card-link" href="https://github.com/cycraig/MP-DQN">
-                            <img class="card-img" src="assets/img/mpdqnplat.webp" alt="Card example image">
+                            <img class="card-img" src="assets/img/mpdqnplat.webp" alt="2D pixel game showing the path of a character evading an enemy">
                             <div class="card-body">
                                 <h4 class="card-title">MP-DQN</h4>
                                 <p class="card-text">Parameterised-action deep reinforcement learning research.</p>
@@ -135,7 +135,7 @@
 
                     <div class="card margin">
                         <a class="card-link" href="https://www.youtube.com/watch?v=ba5AJ4K7IeU">
-                            <img class="card-img" src="assets/img/ev3e.webp" alt="Card example image">
+                            <img class="card-img" src="assets/img/ev3e.webp" alt="Wheeled Lego EV3 robot with a pair of mandible grippers in front of CocaCola cans">
                             <div class="card-body">
                                 <h4 class="card-title">Can Collector Robot</h4>
                                 <p class="card-text">LEGO Mindstorms EV3 with object detection, localisation, and path
@@ -153,7 +153,7 @@
 
                     <div class="card margin">
                         <a class="card-link" href="http://githubactivity.craigbester.com/">
-                            <img class="card-img" src="assets/img/githubactivityfeed.webp" alt="Card example image">
+                            <img class="card-img" src="assets/img/githubactivityfeed.webp" alt="List of GitHub events">
                             <div class="card-body">
                                 <h4 class="card-title">GitHub Activity Feed</h4>
                                 <p class="card-text">Simple GitHub event viewer with OAuth.</p>
