--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<head>
 <meta charset="utf-8">
 <title>Craig Bester</title>
 <meta name="description" content="Personal Website">
@@ -13,21 +14,25 @@
 <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
 <style>
-    canvas {
-        top: 40px;
+    #boids {
+        top: 0;
         display: block;
         position: absolute;
         pointer-events: none;
         z-index: -10;
     }
 
-    .section::after {
-        display: None;
+    .spaghetti {
+        font-family: cursive;
     }
 
     @media screen and (max-width: 585px) {
         .header-name {
             font-size: 3em;
+        }
+
+        .header-message {
+            font-size: 1.2rem;
         }
     }
 </style>
@@ -36,7 +41,6 @@
 </head>
 
 <body>
-
     <div id='content' class='row site'>
         <div class='col-12 col'>
             <div id='inner' class='paper'>
@@ -44,6 +48,7 @@
                     <div class='row flex-center'>
                         <div class='text-center'>
                             <h1 class='header-name'>Craig Bester</h1>
+                            <h4 class='header-message'>turning <span class="spaghetti">Spaghetti Code</span> into<br/>Gourmet Software</h4>
                         </div>
                     </div>
 
@@ -59,152 +64,18 @@
                         </a>
                     </div>
                 </div>
-                <div id='section-description' class='section' style='text-align:center;'>
-                    Some of my open-source contributions and technical demos.<br /><br />
-                </div>
-
-                <div class="row flex-center">
-
-                    <div class="card margin">
-                        <a class="card-link" href="https://github.com/iotaledger/identity.rs">
-                            <img class="card-img" src="assets/img/iota_did.webp" alt="IOTA Identity logo shaped like a fingerprint">
-                            <div class="card-body">
-                                <h4 class="card-title">IOTA Identity</h4>
-                                <p class="card-text">Self-Sovereign Identity (SSI) framework.</p>
-                            </div>
-                        </a>
-                        <div class="card-footer">
-                            <a class='paper-btn card-footer-btn' href="https://github.com/iotaledger/identity.rs">
-                                <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span
-                                    class="sr-only">Github</span>Rust, WebAssembly <i
-                                    class="fas fa-xs fa-external-link-alt" style="float: right; color: gray;"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="card margin">
-                        <a class="card-link" href="http://scpbattle.craigbester.com/">
-                            <img class="card-img" src="assets/img/scpbattle.webp" alt="SCP Battle website">
-                            <div class="card-body">
-                                <h4 class="card-title">SCP Battle</h4>
-                                <p class="card-text">Voting webapp based on the SCP Foundation.</p>
-                            </div>
-                        </a>
-                        <div class="card-footer">
-                            <a class='paper-btn card-footer-btn' href="https://github.com/cycraig/scpbattle">
-                                <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span
-                                    class="sr-only">Github</span>Go, Echo <i class="fas fa-xs fa-external-link-alt"
-                                    style="float: right; color: gray;"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="card margin">
-                        <a class="card-link" href="https://github.com/cycraig/MP-DQN">
-                            <img class="card-img" src="assets/img/mpdqnplat.webp" alt="2D pixel game showing the path of a character evading an enemy">
-                            <div class="card-body">
-                                <h4 class="card-title">MP-DQN</h4>
-                                <p class="card-text">Parameterised-action deep reinforcement learning research.</p>
-                            </div>
-                        </a>
-                        <div class="card-footer">
-                            <a class='paper-btn card-footer-btn' href="https://github.com/cycraig/MP-DQN">
-                                <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span
-                                    class="sr-only">Github</span>Python, PyTorch <i
-                                    class="fas fa-xs fa-external-link-alt" style="float: right; color: gray;"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- <div class="card margin">
-                        <a class="card-link" href="facescrambler/index.html">
-                            <img class="card-img" src="assets/img/facescrambler.webp" alt="Card example image">
-                            <div class="card-body">
-                                <h4 class="card-title">Face Scrambler</h4>
-                                <p class="card-text">Minimal example of using OpenCV with WebAssembly.</p>
-                            </div>
-                        </a>
-                        <div class="card-footer">
-                            <a class='paper-btn card-footer-btn' href="https://github.com/cycraig/facescrambler">
-                                <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span
-                                    class="sr-only">Github</span>Javascript, OpenCV <i
-                                    class="fas fa-xs fa-external-link-alt" style="float: right; color: gray;"></i>
-                            </a>
-                        </div>
-                    </div> -->
-
-                    <div class="card margin">
-                        <a class="card-link" href="https://www.youtube.com/watch?v=ba5AJ4K7IeU">
-                            <img class="card-img" src="assets/img/ev3e.webp" alt="Wheeled Lego EV3 robot with a pair of mandible grippers in front of CocaCola cans">
-                            <div class="card-body">
-                                <h4 class="card-title">Can Collector Robot</h4>
-                                <p class="card-text">LEGO Mindstorms EV3 with object detection, localisation, and path
-                                    planning.</p>
-                            </div>
-                        </a>
-                        <div class="card-footer">
-                            <a class='paper-btn card-footer-btn' href="https://github.com/cycraig/ev3e">
-                                <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span
-                                    class="sr-only">Github</span>Python, ev3dev <i
-                                    class="fas fa-xs fa-external-link-alt" style="float: right; color: gray;"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="card margin">
-                        <a class="card-link" href="http://githubactivity.craigbester.com/">
-                            <img class="card-img" src="assets/img/githubactivityfeed.webp" alt="List of GitHub events">
-                            <div class="card-body">
-                                <h4 class="card-title">GitHub Activity Feed</h4>
-                                <p class="card-text">Simple GitHub event viewer with OAuth.</p>
-                            </div>
-                        </a>
-                        <div class="card-footer">
-                            <a class='paper-btn card-footer-btn' href="https://github.com/cycraig/GithubActivityFeed">
-                                <i class="fab fa-github fa-lg card-github-icon" aria-hidden="true"></i><span
-                                    class="sr-only">Github</span>Python, Flask <i class="fas fa-xs fa-external-link-alt"
-                                    style="float: right; color: gray;"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
 
-            <canvas></canvas>
-        </div>
-
-        <div class='col-12 col'>
-            <div id='inner' class='paper'>
-                <div id='header' class='header'>
-                    <div class='row flex-center'>
-                        <div class='text-center'>
-                            <h1 class='header-name'>Support privacy.</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class='section' style='text-align:center;'>
-                    Unfettered and unregulated use of facial recognition software is ineffectual and erodes human
-                    rights.
-                </div>
-                <div class='section' style='text-align:center;'>
-                    <p>UK: <a class='paper-btn' href="https://bigbrotherwatch.org.uk/"
-                            style="padding:10px;">bigbrotherwatch.org.uk</a>
-                    </p>
-                    <p>USA: <a class='paper-btn' href="https://www.banfacialrecognition.com/"
-                            style="padding:10px;">banfacialrecognition.com</a></p>
-                </div>
-                <iframe src="https://www.banfacialrecognition.com/map/?embed=true"
-                    style="width:100%;height:400px;overflow:hidden;border:none"></iframe>
-            </div>
+            <canvas id="boids"></canvas>
         </div>
         <div class="footer row flex-center">
-            <p>Copyright &copy; 2022 Craig Bester. All rights reserved.</p>
+            <p>Copyright &copy; 2024 Craig Bester. All rights reserved.</p>
         </div>
     </div>
 
     <script type="module" src="./rust-boids-wasm/index.js"></script>
     <script type="application/javascript" defer>
-        // Changes to accomodate the boids.
+        // Changes to accommodate the boids.
 
         // Override the canvas size to fit the inner container.
         const canvas = document.querySelector('canvas')
@@ -237,5 +108,5 @@
         content.addEventListener('mousemove', event => forwardMouseEvent(event));
         content.addEventListener('mouseleave', event => forwardMouseEvent(event));
     </script>
-
+</body>
 </html>
