--- a/index.html
+++ b/index.html
@@ -5,37 +5,14 @@
 <title>Craig Bester</title>
 <meta name="description" content="Personal Website">
 <meta name="author" content="Craig Bester">
-<link rel="shortcut icon" href="assets_shared/img/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" type="text/css" href="assets_shared/css/paper.min.css">
-<link rel="stylesheet" type="text/css" href="assets_shared/css/base.css">
+<link rel="stylesheet" type="text/css" href="assets/css/paper.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/base.css">
 <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
-<style>
-    #boids {
-        top: 0;
-        display: block;
-        position: absolute;
-        pointer-events: none;
-        z-index: -10;
-    }
-
-    .spaghetti {
-        font-family: cursive;
-    }
-
-    @media screen and (max-width: 585px) {
-        .header-name {
-            font-size: 3em;
-        }
-
-        .header-message {
-            font-size: 1.2rem;
-        }
-    }
-</style>
 
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "0088ebc088b24d2b85d51613fd8431f5"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
@@ -48,7 +25,7 @@
                     <div class='row flex-center'>
                         <div class='text-center'>
                             <h1 class='header-name'>Craig Bester</h1>
-                            <h4 class='header-message'>turning <span class="spaghetti">Spaghetti Code</span> into<br/>Gourmet Software</h4>
+                            <h4 class='header-message'>turning <span id="spaghetti">Spaghetti Code</span> into<br/>Gourmet Software</h4>
                         </div>
                     </div>
 
