--- a/index.html
+++ b/index.html
@@ -1,88 +1,120 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Craig Bester</title>
-<meta name="description" content="Personal Website">
-<meta name="author" content="Craig Bester">
-<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-<meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Craig Bester</title>
+    <meta name="description" content="Personal Website">
+    <meta name="author" content="Craig Bester">
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" type="text/css" href="assets/css/paper.min.css">
-<link rel="stylesheet" type="text/css" href="assets/css/base.css">
-<link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <link rel="preload" href="assets/img/geometry.png" as="image"/>
+    <link rel="preload" href="assets/img/envelope.svg" as="image"/>
+    <link rel="preload" href="assets/img/github.svg" as="image"/>
+    <link rel="preload" href="assets/font/Ripcord.otf" as="font" crossorigin="anonymous"/>
+    <link rel="preload" href="rust-boids-wasm/index.js" as="script" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/paper.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/base.css">
 
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "0088ebc088b24d2b85d51613fd8431f5"}'></script><!-- End Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+            data-cf-beacon='{"token": "0088ebc088b24d2b85d51613fd8431f5"}'></script>
 </head>
 
 <body>
-    <div id='content' class='row site'>
-        <div class='col-12 col'>
-            <div id='inner' class='paper'>
-                <div id='header' class='header'>
-                    <div class='row flex-center'>
-                        <div class='text-center'>
-                            <h1 class='header-name'>Craig Bester</h1>
-                            <h4 class='header-message'>turning <span id="spaghetti">Spaghetti Code</span> into<br/>Gourmet Software</h4>
-                        </div>
-                    </div>
-
-                    <div class="row flex-center">
-                        <a class='paper-btn round-btn margin' href="https://github.com/cycraig">
-                            <i class="fab fa-github fa-lg" aria-hidden="true"></i>
-                            <span class="sr-only">Github</span>
-                        </a>
-                        <a class="paper-btn round-btn margin"
-                            href="mailto:&#x6d;&#x65;&commat;&#x63;&#x72;&#x61;&#x69;&#x67;&#x62;&#x65;&#x73;&#x74;&#x65;&#x72;&period;&#x63;&#x6f;&#x6d;">
-                            <i class="fas fa-envelope" aria-hidden="true"></i>
-                            <span class="sr-only">Email</span>
-                        </a>
+<main id='content' class='row site'>
+    <div class='col-12 col'>
+        <div id='inner' class='paper'>
+            <div id='header' class='header'>
+                <div class='row flex-center'>
+                    <div class='text-center'>
+                        <h1 id='title' class='header-name' style="visibility: hidden;">Craig Bester</h1>
+                        <!--<h4 class='header-message'>turning <span id="spaghetti">Spaghetti Code</span> into<br/>Gourmet Software</h4>-->
                     </div>
                 </div>
             </div>
 
-            <canvas id="boids"></canvas>
+            <div id="buttons" class="buttons row flex-center" style="visibility: hidden;">
+                <a id="btn-gh" class='paper-btn round-btn margin' aria-label="GitHub" href="03151203185b495c0c08121b1e034810040c4910120214120206">
+                    <img style="padding:0" class="icon-image" src="assets/img/github.svg" alt="GitHub"
+                         aria-hidden="true">
+                </a>
+                <a id="btn-em" class="paper-btn round-btn margin" aria-label="Email" href="06000f1f1f0e5c1402150e06092105010a0801110e121216194f051c06">
+                    <img style="padding:0.25rem" class="icon-image" src="assets/img/envelope.svg" alt="Email"
+                         aria-hidden="true">
+                </a>
+            </div>
         </div>
-        <div class="footer row flex-center">
-            <p>Copyright &copy; 2024 Craig Bester. All rights reserved.</p>
-        </div>
+
+        <canvas id="boids"></canvas>
     </div>
+    <div id="footer" class="footer row flex-center" style="visibility: hidden;">
+        <p>Copyright &copy; 2025 Craig Bester. All rights reserved.
+    </div>
+</main>
 
-    <script type="module" src="./rust-boids-wasm/index.js"></script>
-    <script type="application/javascript" defer>
-        // Changes to accommodate the boids.
+<script type="module" src="rust-boids-wasm/index.js"></script>
+<script type="application/javascript" defer>
+    // Changes to accommodate the boids.
 
-        // Override the canvas size to fit the inner container.
-        const canvas = document.querySelector('canvas')
-        function resizeCanvas(e) {
-            canvas.width = document.getElementById("inner").clientWidth;
-            canvas.height = document.getElementById("header").scrollHeight * 2;
-            if (e) { // prevent the original resize handler from running
-                e.stopImmediatePropagation();
-            }
+    // Override the canvas size to fit the inner container.
+    const canvas = document.querySelector('canvas')
+
+    function resizeCanvas(e) {
+        canvas.width = document.getElementById("inner").clientWidth;
+        canvas.height = document.getElementById("inner").scrollHeight * 1.5;
+        // Prevent the original resize handler from running.
+        if (e) {
+            e.stopImmediatePropagation();
         }
-        window.addEventListener('resize', resizeCanvas);
+    }
 
-        // Wait for the module to be loaded before overriding the canvas size.
-        document.addEventListener("DOMContentLoaded", () => {
-            resizeCanvas();
+    window.addEventListener('resize', resizeCanvas);
+
+    // Wait for the module to load before overriding the canvas size.
+    document.addEventListener("DOMContentLoaded", () => {
+        resizeCanvas();
+    });
+
+    const a = ["\u0073\u0065\u006e\u0074", "\u0063\u0061\u0066\u0064", "\u0065\u0064\u0061\u0066", "\u0067\u0066\u0069\u0068", "\u0069\u0069\u0073\u006a", "\u006b\u006a\u0061\u006c", "\u006d\u006b\u006f\u006e", "\u006f\u006d\u0069\u0070", "\u0071\u006e\u006e\u0072", "\u0061\u006e\u006f\u0062", -4, 8, 18, 24, "\u006b\u0061\u0066\u0073"];
+    if ((navigator.languages ?? [navigator.language] ?? [""]).every((l) => a.slice(0, 10)
+        .map((b) => b.substring(1,3)).includes(l.split("\u002d")[0].toLowerCase())) && a.slice(10, 14).map((d) => d*30).includes((new Date()).getTimezoneOffset())) {
+        const x = (t,k) => [...t].map((x, i) => (x.codePointAt() ^ k.charCodeAt(i % k.length) % 255).toString(16).padStart(2,"0")).join('');
+        const y = (t,k) => String.fromCharCode(...t.match(/.{1,2}/g).map((x,i) => parseInt(x, 16) ^ k.charCodeAt(i % k.length) % 255));
+        for (const e of ["title", "buttons", "footer", "btn-gh", "btn-em"].map(id => document.getElementById(id))) {
+            const h = e.getAttribute("\u0068\u0072\u0065\u0066");
+            if (h) e.href = y(y(x(h, a[a.length-1]), a[a.length-1]), a[a.length-1]);
+            e.style = "";
+        }
+    }
+
+    // Forward mouse events to the canvas.
+    let forwardMouseEvent = function (event) {
+        if (!event instanceof MouseEvent) {
+            return;
+        }
+
+        const forwardedEvent = new MouseEvent(event.type, {
+            // Disable bubbling otherwise the listener recurses.
+            bubbles: false,
+            cancelable: event.cancelable,
+            view: event.view,
+            clientX: event.clientX,
+            clientY: event.clientY,
+            screenX: event.screenX,
+            screenY: event.screenY,
+            ctrlKey: event.ctrlKey,
+            shiftKey: event.shiftKey,
+            altKey: event.altKey,
+            metaKey: event.metaKey,
+            button: event.button,
+            buttons: event.buttons,
+            relatedTarget: event.relatedTarget
         });
-
-        // Forward mouse events to the canvas
-        let forwardMouseEvent = function (event) {
-            var forwardedEvent = document.createEvent("MouseEvents");
-            // set event.bubbles false otherwise the listener recurses
-            forwardedEvent.initMouseEvent(event.type, false, event.cancelable, event.view, event.detail,
-                event.pageX || event.layerX, event.pageY || event.layerY, event.clientX, event.clientY,
-                event.ctrlKey, event.altKey, event.shiftKey, event.metaKey, event.button,
-                event.relatedTarget);
-            canvas.dispatchEvent(forwardedEvent);
-        };
-        document.addEventListener('click', event => forwardMouseEvent(event));
-        document.addEventListener('mousemove', event => forwardMouseEvent(event));
-        document.addEventListener('mouseleave', event => forwardMouseEvent(event));
-    </script>
+        canvas.dispatchEvent(forwardedEvent);
+    };
+    document.addEventListener('mousemove', event => forwardMouseEvent(event));
+    document.addEventListener('mouseleave', event => forwardMouseEvent(event));
+</script>
 </body>
 </html>
